sg.tf
# resource "aws_security_group" "allow_tls" {
#   name        = "${local.name}-allow_tls"
#   description = "Allow TLS inbound traffic"
#   vpc_id      = aws_vpc.main.id

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = merge( var.tags,var.sg_tags,{

#       Name="${local.name}-allow_tls"
  
# }
#   )
# }

# resource "aws_security_group_rule" "example" {
#   type              = "ingress"
#   from_port         = 0
#   to_port           = 65535
#   protocol          = "tcp"
#   cidr_blocks       = [aws_vpc.main.cidr_block]
#   security_group_id = "sg-123456"
# }
